objects/Automated_Repayment_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>CL_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CL Contract</label>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipLabel>Automated Repayment Schedule</relationshipLabel>
        <relationshipName>Automated_Repayment_Schedule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Payments__c</fullName>
        <label>Number of Payments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Repayment_Amount__c</fullName>
        <label>Repayment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Repayment_Date__c</fullName>
        <label>Repayment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Automated Repayment Schedule</label>
    <nameField>
        <displayFormat>ARS-{0000000000}</displayFormat>
        <label>Automated Repayment Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Automated Repayment Schedule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>